<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-230dp"
        android:src="@drawable/top_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="150dp"
                android:text="Create Account"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="Name"
                android:inputType="text"
                android:padding="15sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"

                />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="text"
                android:padding="15sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"

                />

            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15sp"
                android:textColor="@color/white"

                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/editTextText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="RePassword"
               android:inputType="textPassword"
                android:padding="15sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"

                />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:contentDescription="TODO"
                android:src="@drawable/btn_login"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/are_you_new_user_register"
                android:textStyle="bold"
                android:textSize="19sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>